@@ -8,6 +8,9 @@ use warnings;
 module_init("chanserv/help", "The Chakora Project", "0.1", \&init_cs_help, \&void_cs_help, "all");
 
 sub init_cs_help {
+	if (!module_exists("chanserv/main")) {
+		module_load("chanserv/main");
+	}
 	cmd_add("chanserv/help", "NO_HELP_ENTRY", "NO_HELP_ENTRY", \&svs_cs_help);
 }
 
