@@ -8,6 +8,9 @@ use warnings;
 module_init("chanserv/info", "The Chakora Project", "0.1", \&init_cs_info, \&void_cs_info, "all");
 
 sub init_cs_info {
+	if (!module_exists("chanserv/main")) {
+		module_load("chanserv/main");
+	}
 	cmd_add("chanserv/info", "Display information about a channel.", "INFO will display channel information such as\nregistration date and time, settings, founder\n,and other details.\n[T]\nSyntax: INFO <channel>", \&svs_cs_info);
 }
 
