@@ -108,53 +108,4 @@ sub logchan {
     serv_privmsg( $service, config( 'log', 'logchan' ), $text );
 }
 
-sub apply_status {
-	my ($user, $chan) = @_;
-	if (!uidInfo($user, 9)) {
-		return;
-	}
-	
-	my $account = uidInfo($user, 9);
-	my ($flags);
-	foreach my $key (keys %Chakora::DB_chanflags) {
-		if (lc($Chakora::DB_chanflags{$key}{chan}) eq lc($chan) and lc($Chakora::DB_chanflags{$key}{account}) eq lc($account)) {
-			$flags = $Chakora::DB_chanflags{$key}{flags};
-		}
-	}
-	
-	if (!$flags) {
-		return;
-	}
-	
-	my ($modes);
-	if ($flags =~ m/q/ and defined($Chakora::PROTO_SETTINGS{owner})) {
-		$modes .= $Chakora::PROTO_SETTINGS{owner};
-	}
-	if ($flags =~ m/a/ and defined($Chakora::PROTO_SETTINGS{admin})) {
-		$modes .= $Chakora::PROTO_SETTINGS{admin};
-	}
-	if ($flags =~ m/O/ and defined($Chakora::PROTO_SETTINGS{op})) {
-		$modes .= $Chakora::PROTO_SETTINGS{op};
-	}
-	if ($flags =~ m/H/ and defined($Chakora::PROTO_SETTINGS{halfop})) {
-		$modes .= $Chakora::PROTO_SETTINGS{halfop};
-	}
-	if ($flags =~ m/V/ and defined($Chakora::PROTO_SETTINGS{voice})) {
-		$modes .= $Chakora::PROTO_SETTINGS{voice};
-	}
-	
-	if (length($modes) == 0) {
-		return;
-	}
-	
-	my ($tg);
-	my $calc = length($modes);
-	while ($calc > 0) {
-		$tg .= ' '.$user;
-		$calc -= 1;
-	}
-	
-	serv_mode("chanserv", $chan, $modes.$tg);
-}
-
 1;
