@@ -96,3 +96,5 @@ Current
 	- Modules: added chanserv/info and chanserv/flist
 	- Modules: (chanserv|nickserv|operserv)/help: Improved how help is displayed.
 	- API: Added is_tainted
+	- Modules: Made ChanServ modular with chanserv/main. All ChanServ modules will load this if it's not loaded as it is dependent on ChanServ.
+          You should add chanserv/main to autoload before any ChanServ modules regardless.
